Fix incorrect namespacing in Base/Visibility/Hide mixin name [#54]

--- a/src/adapter/bootstrap/base/visibility/hide.scss
+++ b/src/adapter/bootstrap/base/visibility/hide.scss
@@ -1,3 +1,3 @@
-@mixin -base-block-visibility-hide {
+@mixin -base-visibility-hide {
     @extend .hide;
 }
