--- a/src/core/definitions/base/visibility/hide.scss
+++ b/src/core/definitions/base/visibility/hide.scss
@@ -1,3 +1,3 @@
 .hide {
-    @include -base-block-visibility-hide;
+    @include -base-visibility-hide;
 }
